# emojilang

./: .gitignore  CMakeLists.txt  CONVERSION_STATUS.md  CONVERSION_SUMMARY.md  EmojiInterpreter.py  EmojiTransformer.py  GIT_SUBMISSION.md  LICENSE  Makefile  PULL_REQUEST.md  README.md  README_CPP.md  SUBMISSION_READY.md  emojiGrammar.lark  main.py  plainGrammar.lark  prime.emo
include/: EmojiInterpreter.hpp  EmojiTransformer.hpp  Parser.hpp  SymbolTable.hpp  Token.hpp  Tree.hpp
src/: EmojiInterpreter.cpp  EmojiTransformer.cpp  Parser.cpp  SymbolTable.cpp  Token.cpp  Tree.cpp  main.cpp
tests/: comment.emo  factorial.emo  fibonacci.emo  firstPrimes.emo  helloworld.emo  logicalcheck.emo
